Password now outputs to page ccorrectly. password length is set to 8 Characters for now.

--- a/passgen-2.html
+++ b/passgen-2.html
@@ -5,36 +5,17 @@
 <html>
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 </head>
-<script>
-var PHRASES =  [ 'z', 'aw', 'oo', 'ow', 'oi', 'nk', 'ng', 'wh', 'th', 'sh', 'ch', 'str', 'a', 'e', 'i', 'o', 'u']
+
+<div id='pw'>
 
 
-var generate = function(length){
-  var result = ''
-
-  while(result.length < length){
-    // random selection over the array
-    var phra = PHRASES[Math.floor(Math.random()*PHRASES.length)]; //(internet copypasta)
-    result += phra
-  }
-    
-  return result;
-}
+<script type="text/javascript" src='passgen-2.js'></script>
 
 
-var ask = function(){
-  var size = prompt("How many Characters?")  
 
-  console.log(generate(size))
-}
-
-
-$(document).ready(function(){
-  ask(); 
-});
-
-</script>
+</div>
 
 
 </html>
