Can now alter the length of the password

--- a/popup.html
+++ b/popup.html
@@ -4,15 +4,18 @@
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="background.js"></script>
+
   <body>
     <div id='container'>
-      <div id='pw'>
-      </div>
-
-  
-      <h5 class='options'>Options</h5>
-
+      <div id='pw'> </div>
+      <h5 class='options'>Options</h5>  
       <div class='panel'>
+        <form id="form-id" action="blah.html" method="post">
+          <dl>  
+            <dt>New Length<input id="pass-length" type="text"></dt> 
+          </dl>
+          <input name="Submit" type="submit" value="Update">
+        </form>
         <div>
           <h5 class='more'>More</h5>
           <div class='pick'>
@@ -24,9 +27,6 @@
         </div>
       <div>
     </div>
-  </div>
-
-
   </body>
 </html>
 
