--- a/popup.html
+++ b/popup.html
@@ -7,15 +7,20 @@
 
   <body>
     <div id='container'>
-      <div id='pw'> </div>
+      <div id='pw'></div>
+       <form id="form-id2" action="blah.html" method="post">
+          <input id="again" name="Submit" type="submit" value="New">
+        </form> 
       <h5 class='options'>Options</h5>  
       <div class='panel'>
+
         <form id="form-id" action="blah.html" method="post">
           <dl>  
             <dt>New Length<input id="pass-length" type="text"></dt> 
             <input name="Submit" type="submit" value="Update">
           </dl>
         </form>
+
         <div>
           <h5 class='more'>More</h5>
           <div class='pick'>
